# kubectl-debugger

./: .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  setup.py  setup.py.old
kubectl_debugger/: kubectl-debugger
tests/: test_kubectl_debugger.py
