[tool.poetry]
name = "kubectl-debugger"
version = "0.1.0"
description = "Kubectl pod debugger plugin. Launch a pod into a namespace that contains best of bread debugging tools. Record session for analysis later"
authors = ["zane <zane@ugh.cloud>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23"
kubernetes = "^11.0"
click = "^7.1"

[tool.poetry.dev-dependencies]
ipython = "^8.10"
pytest = "^5.4"
flake8 = "^3.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

